link sign-up button

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <li class="nav-item"><a class="nav-link" href="#">About</a></li>
                     <li class="nav-item"><a class="nav-link" href="policy.html">Privacy</a></li>
                 </ul>
-                <button class="btn btn-primary" type="button" >signup</button>
+                <a href="signup.html" class="btn btn-primary">Sign-Up</a>
             </div>
         </div>
     </nav>
