--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <div class="container">
                         <div class="intro">
                             <h2 class="text-center">Projects </h2>
-                            <p class="text-center">Nunc luctus in metus eget fringilla. Aliquam sed justo ligula. Vestibulum nibh erat, pellentesque ut laoreet vitae. </p>
+                            <p class="text-center">Nunc luctus in get fringilla. Aliquam sed justo ligula. Vestibulum nibh erat, pellentesque ut laoreet vitae. </p>
                         </div>
                         <div class="row projects">
                             <div class="col-sm-6 item">
@@ -78,7 +78,9 @@
                     </div>
                 </section>
             </div>
-            <div class="container"></div>
+            <div class="container">
+
+            </div>
         </div>
     </div>
     <footer class="footer-dark">
